WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13157
List markers positioned incorrectly and don't repaint properly on Oxford homepage
https://bugs.webkit.org/show_bug.cgi?id=13157
Summary
List markers positioned incorrectly and don't repaint properly on Oxford home...
mitz
Reported
2007-03-22 06:52:20 PDT
The bullets under "Quick Links" on the left aren't lined up with the list items. When dragging to select from the bottom up and then contracting the selection by dragging back down, the bullets disappear as the highlighting is removed. Forcing a repaint brings them back. Notice also that the highlight color is applied on top of the bullets instead of behind them (as it should in TOT). This is not a regression from Safari 2.0.4 :-)
Attachments
Reduction
(461 bytes, text/html)
2007-03-22 08:42 PDT
,
mitz
no flags
Details
Relayout when the marker image fails to load
(48.32 KB, patch)
2007-03-22 09:02 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-03-22 08:26:37 PDT
This doesn't happen every time the page is loaded, and when it happens, forcing relayout (by resizing the window) repositions the markers correctly, however the highlighting is still painted above them.
mitz
Comment 2
2007-03-22 08:42:10 PDT
Created
attachment 13763
[details]
Reduction The bug happens when the image for an image marker cannot be loaded and the marker falls back to a bullet.
mitz
Comment 3
2007-03-22 09:02:07 PDT
Created
attachment 13764
[details]
Relayout when the marker image fails to load
Dave Hyatt
Comment 4
2007-03-22 15:40:23 PDT
Comment on
attachment 13764
[details]
Relayout when the marker image fails to load r=me
David Kilzer (:ddkilzer)
Comment 5
2007-03-22 20:46:47 PDT
***
Bug 12455
has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 6
2007-03-22 20:50:22 PDT
From
Bug 12455
: <
rdar://problem/4971213
>
Mark Rowe (bdash)
Comment 7
2007-03-23 04:47:35 PDT
<
rdar://problem/4971213
> is closed. Marking NeedsRadar so this gets pulled in next migration.
Mark Rowe (bdash)
Comment 8
2007-03-23 04:51:14 PDT
<
rdar://problem/5083995
>
Mark Rowe (bdash)
Comment 9
2007-03-23 04:53:38 PDT
Landed in
r20429
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug