2007-03-23  Mitz Pettel  <mitz@webkit.org>

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13157
          List markers positioned incorrectly and don't repaint properly on Oxford homepage

        Test: fast/lists/marker-image-error.html

        * rendering/RenderListMarker.cpp:
        (WebCore::RenderListMarker::imageChanged): Mark ourselves for relayout if
        the image failed to load, since that means we will use a bullet instead.

2007-03-23  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13157
          List markers positioned incorrectly and don't repaint properly on Oxford homepage

        * fast/lists/marker-image-error-expected.checksum: Added.
        * fast/lists/marker-image-error-expected.png: Added.
        * fast/lists/marker-image-error-expected.txt: Added.
        * fast/lists/marker-image-error.html: Added.


Canonical link: https://commits.webkit.org/17188@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20429 268f45cc-cd09-0410-ab3c-d52691b4dbfc